Allow an external URL with FROM_API qualifier to be forwarded to ARC

for better AppAuth compatibility.

In a highly unusual situation, allowing FROM_API could trigger
infinite Chrome tab creation. This CL also adds code for detecting
and stopping the loop, just in case. End users will almost never
see the safety checks to kick in, though.

BUG=670465
TEST=unit_tests passed, also manually confirmed that when
 |always_ask_user| is true, "Always" preference set by
 the user is ignored.

Review-Url: https://codereview.chromium.org/2540013004
Cr-Commit-Position: refs/heads/master@{#436017}

Former-commit-id: 0c7e06f5b85f0304bd62f61a9b2ae391e97f3183